tp12/styles.css
:root {
    --predictionBoxWidth: 70vw;
    --predictionBoxHeight: 20vh;

* {
    box-sizing: border-box;
}

body {
    padding: 0;
    margin: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

main {
    position: relative;
    width: 100%;
    height: 100%;
    
    background-color: azure;
    display: grid;
    grid-template-columns: 50vw 50vw;
    grid-template-rows: 50vh 30vh var(--predictionBoxHeight);
    grid-template-areas: 
   'currentInfo    currentInfo'
    'currentHum     currentWind'
    'future         future'
    'future         future';
}


#currentInfo {
    position: relative;
    grid-area:currentInfo;
    background-color: blanchedalmond;
    background-image: url(/Images/sunny.jpg);
    background-size: cover;
    background-position: center center;
    border-bottom: 1px solid white;
    color: black
    font-size: 5rem;
}


#currentTemp {
    position: absolute;
    grid-area: currentTemp;
    font-size: 5rem;
    left: 1rem;
    color: black;
}

#currentStatus {
    position: absolute;
    bottom: 1rem;
    font-size: 2rem;
    left: 1rem;
}

#currentHumidty {
    position: relative;
    grid-area: currentHum;
    background-color: bisque;
    background-image: url(/Images/Humd.jpg);
    background-size: cover;
    background-position: center center;
    border-bottom: 1px solid white;
    border-right: 1px solid white;
    font-size: 3rem;
    color: black

}

#currentWind {
    position: relative;
    grid-area: currentWind;
    background-color: beige;
    background-image: url(/Images/wind.jpg);
    background-size: cover;
    background-position: center center;
    border-bottom: 1px solid white;
    font-size: 2rem;
}

#futureInfo {
    position: relative;
    grid-area: future;
    background-color: azure;
    overflow: auto;
    overflow-y: hidden;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

#futureinfo::-webkit-scrollbar {
    display: none;}




.futureDay {
position:absolute;
width: var(--predictionBoxWidth);
height: var(--predictionBoxHeight);
border-right: 1px solid gray;
}

.futureDay:nth-child(2) {
    left: var(--predictionBoxWidth);
    border-right: 1px solid gray;
}

.futureDay:nth-child(3) {
    left: calc( var(--predictionBoxWidth)*2);
    border-right: 1px solid gray;

}
.futureDay:nth-child(4) {
    left: calc( var(--predictionBoxWidth)*3);
    border-right: none;
}

@media screen and (orientation: landscape) {

    :root {
        --predictionBoxWidth: 30vw;
        --predictionBoxHeight: calc( 100vh / 3 );
    }

    main {
        grid-template-columns: 50vw 50vw;
        grid-template-rows:50vh 30vh var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight) var(--predictionBoxHeight);
        grid-template-areas:
            'currentInfo    currentHum'
            'currentInfo    currentWind'
            'future         future'
    }

    #currentInfo {
        border-bottom: none;
        border-right: 1px solid white;
    }
}

@media (max-width: 600px) {
 
    .futureInfo {
    flex-direction: grid;
  }
}
    #futureInfo {

    display: flex;
    
    justify-content: flex-start; 
    align-items: center; 

    flex-direction: row; 
    flex-wrap: nowrap; 
    align-content: center;

    background-color: #bbdefb;
    height: 100%;
    padding: 3px;
    gap: 2px;

  }

  .futureDay > div{
    height: calc(100% / 3);
    background: azure;
    border: 1px solid grey;
    border-radius: 5px;
    padding: 8px;
  }		

